@@ -25,7 +25,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 	private static final Logger logger = Logger.getLogger(SQLServerDDLGenerator.class);
 
 	private static HashSet reservedWords;
-	
+
 	static {
 		reservedWords = new HashSet();
 		reservedWords.add("ADD");
@@ -201,7 +201,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 		reservedWords.add("WHERE");
 		reservedWords.add("WHILE");
 		reservedWords.add("WITH");
-		reservedWords.add("WRITETEXT");	
+		reservedWords.add("WRITETEXT");
 	}
 
 	public boolean isReservedWord(String word) {
@@ -212,7 +212,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 	public void writeHeader() {
 		println("-- Created by SQLPower SQLServer 2000 DDL Generator "+GENERATOR_VERSION+" --");
 	}
-	
+
     @Override
 	public void writeDDLTransactionBegin() {
         // nothing needs to be done for beginning a transaction
@@ -238,35 +238,35 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
     @Override
 	protected void createTypeMap() throws SQLException {
 		typeMap = new HashMap();
-		
-		typeMap.put(new Integer(Types.BIGINT), new GenericTypeDescriptor("BIGINT", Types.BIGINT, 38, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.BINARY), new GenericTypeDescriptor("BINARY", Types.BINARY, 2000, "0x", null, DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.BIT), new GenericTypeDescriptor("BIT", Types.BIT, 1, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.BLOB), new GenericTypeDescriptor("IMAGE", Types.BLOB, 2147483647, "0x", null, DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.CHAR), new GenericTypeDescriptor("CHAR", Types.CHAR, 8000, "'", "'", DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.CLOB), new GenericTypeDescriptor("TEXT", Types.CLOB, 2147483647, "'", "'", DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.DATE), new GenericTypeDescriptor("DATETIME", Types.DATE, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.DECIMAL), new GenericTypeDescriptor("DECIMAL", Types.DECIMAL, 38, null, null, DatabaseMetaData.columnNullable, true, true));
-		typeMap.put(new Integer(Types.DOUBLE), new GenericTypeDescriptor("REAL", Types.DOUBLE, 38, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.FLOAT), new GenericTypeDescriptor("FLOAT", Types.FLOAT, 38, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.INTEGER), new GenericTypeDescriptor("INT", Types.INTEGER, 10, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.LONGVARBINARY), new GenericTypeDescriptor("IMAGE", Types.LONGVARBINARY, 2147483647, "0x", null, DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.LONGVARCHAR), new GenericTypeDescriptor("TEXT", Types.LONGVARCHAR, 2147483647, "'", "'", DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.NUMERIC), new GenericTypeDescriptor("NUMERIC", Types.NUMERIC, 38, null, null, DatabaseMetaData.columnNullable, true, true));
-		typeMap.put(new Integer(Types.REAL), new GenericTypeDescriptor("REAL", Types.REAL, 38, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.SMALLINT), new GenericTypeDescriptor("SMALLINT", Types.SMALLINT, 5, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.TIME), new GenericTypeDescriptor("DATETIME", Types.TIME, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.TIMESTAMP), new GenericTypeDescriptor("DATETIME", Types.TIMESTAMP, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.TINYINT), new GenericTypeDescriptor("TINYINT", Types.TINYINT, 3, null, null, DatabaseMetaData.columnNullable, false, false));
-		typeMap.put(new Integer(Types.VARBINARY), new GenericTypeDescriptor("VARBINARY", Types.VARBINARY, 8000, null, null, DatabaseMetaData.columnNullable, true, false));
-		typeMap.put(new Integer(Types.VARCHAR), new GenericTypeDescriptor("VARCHAR", Types.VARCHAR, 8000, "'", "'", DatabaseMetaData.columnNullable, true, false));
+
+		typeMap.put(Integer.valueOf(Types.BIGINT), new GenericTypeDescriptor("BIGINT", Types.BIGINT, 38, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.BINARY), new GenericTypeDescriptor("BINARY", Types.BINARY, 2000, "0x", null, DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.BIT), new GenericTypeDescriptor("BIT", Types.BIT, 1, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.BLOB), new GenericTypeDescriptor("IMAGE", Types.BLOB, 2147483647, "0x", null, DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.CHAR), new GenericTypeDescriptor("CHAR", Types.CHAR, 8000, "'", "'", DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.CLOB), new GenericTypeDescriptor("TEXT", Types.CLOB, 2147483647, "'", "'", DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.DATE), new GenericTypeDescriptor("DATETIME", Types.DATE, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.DECIMAL), new GenericTypeDescriptor("DECIMAL", Types.DECIMAL, 38, null, null, DatabaseMetaData.columnNullable, true, true));
+		typeMap.put(Integer.valueOf(Types.DOUBLE), new GenericTypeDescriptor("REAL", Types.DOUBLE, 38, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.FLOAT), new GenericTypeDescriptor("FLOAT", Types.FLOAT, 38, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.INTEGER), new GenericTypeDescriptor("INT", Types.INTEGER, 10, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.LONGVARBINARY), new GenericTypeDescriptor("IMAGE", Types.LONGVARBINARY, 2147483647, "0x", null, DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.LONGVARCHAR), new GenericTypeDescriptor("TEXT", Types.LONGVARCHAR, 2147483647, "'", "'", DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.NUMERIC), new GenericTypeDescriptor("NUMERIC", Types.NUMERIC, 38, null, null, DatabaseMetaData.columnNullable, true, true));
+		typeMap.put(Integer.valueOf(Types.REAL), new GenericTypeDescriptor("REAL", Types.REAL, 38, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.SMALLINT), new GenericTypeDescriptor("SMALLINT", Types.SMALLINT, 5, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.TIME), new GenericTypeDescriptor("DATETIME", Types.TIME, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.TIMESTAMP), new GenericTypeDescriptor("DATETIME", Types.TIMESTAMP, 23, "'", "'", DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.TINYINT), new GenericTypeDescriptor("TINYINT", Types.TINYINT, 3, null, null, DatabaseMetaData.columnNullable, false, false));
+		typeMap.put(Integer.valueOf(Types.VARBINARY), new GenericTypeDescriptor("VARBINARY", Types.VARBINARY, 8000, null, null, DatabaseMetaData.columnNullable, true, false));
+		typeMap.put(Integer.valueOf(Types.VARCHAR), new GenericTypeDescriptor("VARCHAR", Types.VARCHAR, 8000, "'", "'", DatabaseMetaData.columnNullable, true, false));
 	}
 
     @Override
     protected void createProfileFunctionMap() {
         profileFunctionMap = new HashMap();
         profileFunctionMap.put("bit", new ProfileFunctionDescriptor("bit", Types.BIT,                   true,false,false,false,false,false,false,true));
-        
+
         profileFunctionMap.put("tinyint", new ProfileFunctionDescriptor("INTEGER", Types.TINYINT,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("tinyint identity", new ProfileFunctionDescriptor("INTEGER", Types.TINYINT,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("bigint", new ProfileFunctionDescriptor("INTEGER", Types.BIGINT,    true,true,true,true,true,true,true,true));
@@ -279,19 +279,19 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
         profileFunctionMap.put("int identity", new ProfileFunctionDescriptor("INTEGER", Types.INTEGER,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("smallint", new ProfileFunctionDescriptor("INTEGER", Types.INTEGER,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("smallint identity", new ProfileFunctionDescriptor("INTEGER", Types.INTEGER,    true,true,true,true,true,true,true,true));
-        
+
         profileFunctionMap.put("float", new ProfileFunctionDescriptor("float", Types.FLOAT,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("real", new ProfileFunctionDescriptor("real", Types.REAL,    true,true,true,true,true,true,true,true));
         profileFunctionMap.put("money", new ProfileFunctionDescriptor("money", Types.NUMERIC,    true,true,true,true,false,false,false,true));
         profileFunctionMap.put("smallmoney", new ProfileFunctionDescriptor("smallmoney", Types.REAL,    true,true,true,true,true,true,true,true));
-        
+
         profileFunctionMap.put("text", new ProfileFunctionDescriptor("text", Types.CLOB, false,false,false,false,false,false,false,false));
         profileFunctionMap.put("ntext", new ProfileFunctionDescriptor("ntext", Types.CLOB, false,false,false,false,false,false,false,false));
         profileFunctionMap.put("image", new ProfileFunctionDescriptor("image", Types.BLOB, false,false,false,false,false,false,false,false));
-        
+
         profileFunctionMap.put("datetime",      new ProfileFunctionDescriptor("datetime", Types.TIMESTAMP,           true,true,true,false,true,true,true,true));
         profileFunctionMap.put("smalldatetime",      new ProfileFunctionDescriptor("smalldatetime", Types.TIMESTAMP,           true,true,true,false,true,true,true,true));
-        
+
         profileFunctionMap.put("varbinary", new ProfileFunctionDescriptor("varbinary", Types.VARBINARY,                true,true,true,false,true,true,true,true));
         profileFunctionMap.put("binary", new ProfileFunctionDescriptor("binary", Types.BINARY,                true,true,true,false,true,true,true,true));
         profileFunctionMap.put("char", new ProfileFunctionDescriptor("char", Types.CHAR,                true,true,true,false,true,true,true,true));
@@ -303,7 +303,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
         profileFunctionMap.put("timestamp", new ProfileFunctionDescriptor("timestamp", Types.REF,                   true,true,true,false,true,true,true,true));
         profileFunctionMap.put("uniqueidentifier", new ProfileFunctionDescriptor("uniqueidentifier", Types.REF,                   true,true,true,false,true,true,true,true));
         profileFunctionMap.put("sql_variant", new ProfileFunctionDescriptor("sql_variant", Types.REF,                   true,true,true,false,true,true,true,true));
-        
+
     }
 
     /**
@@ -324,22 +324,22 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 
 	/**
 	 * Turns a logical identifier into a legal identifier (physical name) for SQL Server.
-     * 
-     * <p>Uses a deterministic method to generate tie-breaking numbers when there is a namespace 
-     * conflict.  If you pass null as the physical name, it will use just the logical name when 
+     *
+     * <p>Uses a deterministic method to generate tie-breaking numbers when there is a namespace
+     * conflict.  If you pass null as the physical name, it will use just the logical name when
      * trying to come up with tie-breaking hashes for identifier names.  If the first attempt
-     * at generating a unique name fails, subsequent calls should pass each new illegal     
+     * at generating a unique name fails, subsequent calls should pass each new illegal
      * identifier which will be used with the logical name to generate a another hash.
-     * 
+     *
      * <p>SQL Server 7.0 Rules:
      * <ul>
      *  <li> no spaces
      *  <li> 128 character limit
      *  <li> can only be comprised of letters, numbers, underscores
      *  <li> can't be an sql server reserved word
-     *  <li> can also use "@$#_" 
+     *  <li> can also use "@$#_"
      * </ul>
-     * 
+     *
      * <p>XXX: the illegal character replacement routine does not play well with regex chars like ^ and |
 	 */
 	private String toIdentifier(String logicalName, String physicalName) {
@@ -348,7 +348,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 		logger.debug("getting physical name for: " + logicalName);
 		String ident = logicalName.replace(' ','_');
 		logger.debug("after replace of spaces: " + ident);
-		
+
 		// replace anything that is not a letter, character, or underscore with an underscore...
 		ident = ident.replaceAll("[^a-zA-Z0-9_@$#]", "_");
 
@@ -364,12 +364,12 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 				int tiebreaker = ((ident.hashCode() % 1000) + 1000) % 1000;
 				logger.debug("new identifier: " + base + tiebreaker);
 				return (base + tiebreaker);
-			}						
+			}
 		} else {
-			// back for more, which means that we probably 
+			// back for more, which means that we probably
             // had a namespace conflict.  Hack the ident down
-            // to size if it's too big, and then generate 
-            // a hash tiebreaker using the ident and the 
+            // to size if it's too big, and then generate
+            // a hash tiebreaker using the ident and the
             // passed value physicalName
 			logger.debug("physical identifier is not unique, regenerating: " + physicalName);
 			String base = ident;
@@ -380,7 +380,7 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
 			logger.debug("regenerated identifier is: " + (base + tiebreaker));
 			return (base + tiebreaker);
 		}
-	}	
+	}
 
     @Override
 	public String toIdentifier(String name) {
@@ -396,19 +396,19 @@ public class SQLServerDDLGenerator extends GenericDDLGenerator {
     public String getAverageSQLFunctionName(String expression) {
         return "AVG(CONVERT(DECIMAL,"+expression+"))";
     }
-    
+
     @Override
     public void addIndex(SQLIndex index) throws ArchitectException {
         if (index.getType() == IndexType.STATISTIC )
             return;
-        
+
         checkDupIndexname(index);
-        
+
         print("CREATE ");
         if (index.isUnique()) {
             print("UNIQUE ");
         }
-        
+
         print("INDEX ");
         print(DDLUtils.toQualifiedName(null,null,index.getName()));
         print("\n ON ");
